# reXplan-repo

./: .gitignore  LICENSE  PowerSystemResilience_UML.v01.drawio.html  README.md  README_SPHINX.md  cartopy.py  const.py  dashboard.py  developments.xlsx  fc1.csv  fragility_curve.py  getDistance.py  main.py  output_iteration_1.xlsx  pyproject.toml  requirements.txt  setup.py  temp-plot.html  test.csv  test.py  test2.py  timeSeriesTest.py
.virtual_documents/jupyter_notebooks/: SimBench.ipynb
Test Scripts/: climada_test.py  dates.xlsx  outages_test.py  trajectory.xlsx
docs/source/: conf.py  index.md  todos.ipynb  welcome.md
docs/source/to_doc/currentprojects/: jup_showcase_faeroeer.ipynb  jup_showcase_iceland.ipynb
docs/source/to_doc/functions/: devfunctions.md  userfunctions.md
docs/source/to_doc/gettingstarted/: basic_example.ipynb  basic_example_sphinx.ipynb  installation.md  jup_basic_example.ipynb
docs/source/to_doc/misc/: examplesI.md
docs/source/to_doc/modeling/: basic_structure.ipynb  grid_modeling.md  hazard_modeling.md  in_fragility_curve.md  in_hazard_modeling.md  input_data.md  jup_basic_structure.ipynb  mid_init_n_run.md  out_engine.md  out_monte_carlo.md  output_data.md
docs/source/to_doc/tutorials/: jup_tutorial_1.ipynb  jup_tutorial_2.ipynb
file/output/Simulation_1/: database.csv  engine_database - first succesfull run.csv  engine_database.csv  montecarlo_database - vide.csv
fragilityCurves/: fc2.csv
hazard/: zone1.csv  zone2.csv
jupyter_notebooks/: 10_x.npy  10_y.npy  AI.PowerSystemAnalysis.revised.v06.ipynb  DEBUG.ipynb  FINAL.ipynb  MONTAG.ipynb  OPF_results.ipynb  SONNTAG.ipynb  Senegal_DEBUG.ipynb  Simulation_using_the_return_period.ipynb  Stratification using R.ipynb  Stratify_Example_ResiliencyTool.ipynb  Untitled.ipynb  basic_example_inputs.ipynb  basic_example_sphinx.ipynb  commands.ipynb  convert.ipynb  debug.ipynb  debug_new_elements.ipynb  deterministic_analysis_netcdf.ipynb  different_timesteps.ipynb  fragilityCurve_test.ipynb  fragility_curves.ipynb  gen_profiles.xls  hazard_test.ipynb  hazards.ipynb  launch.py  ml_script.ipynb  ml_script_WOP.ipynb  model_port_debug.ipynb  montecarlo_ignore.ipynb  multiVarsStratif.R  network.ipynb  network.xlsx  probabilistic_analysis.ipynb  profile_new.prof  profile_old.prof  propabilistic_analysis.ipynb  repair_priority.ipynb  return_period.csv  (+12 more)
jupyter_notebooks/Examples/input/1-HV-urban--0-sw/: network.xlsx
jupyter_notebooks/Examples/input/basic_example/: network.xlsx
jupyter_notebooks/Examples/input/basic_example_v0/: network.xlsx  ~$network.xlsx
jupyter_notebooks/Examples/input/bus_failure_example/: network.xlsx
jupyter_notebooks/Examples/input/case_0/: network.xlsx
jupyter_notebooks/Examples/input/case_1/: network.xlsx
jupyter_notebooks/Examples/input/case_2/: network.xlsx
jupyter_notebooks/archive/: Simulation_using_the_return_period.ipynb  archive_readme.md  repair_priority.ipynb
pluto_notebooks/: Basic_Example.jl
reXplan/: __init__.py  config.py  const.py  convert.py  engine.py  fields_map.csv  fragilitycurve.py  hazard.py  import_grid.py  ml.py  network.py  sheets_map.csv  simulation.py  test.py  utils.py
resiliencyTool/: __init__.py  config.py  const.py  engine.py  fields_map.csv  fragilitycurve.py  hazard.py  network.py  resiliencyTool.py  simulation.py
test/: Netcdf_visual.ipynb  PandaPowerTest.ipynb  Synthetic storm.ipynb  outages_test.py  sythetic_data.nc  testNetwork4nodes.xlsx  tests.py
(+138 files in other folders)
