[build-system]
    requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
    build-backend = "setuptools.build_meta"

[project]
    name = "resiliencyTool"
    description = "This module provides tool to evaluate the resiliency of electrical grids against extreme events"
    version = "0.0.4"
    readme = "README.md"
    requires-python = ">=3.10"
    authors = [{ name = "ENGIE impact", email = "devteam@engie.com" }]
    maintainers = [{ name = "Tim", email = "thoffman@stud.fra-uas.de" }]
    dynamic = ["dependencies"]

[project.urls]
    Documentation = "https://gitbook.io/to-be-published"
    Repository = "https://github.com/FirasJrad/reXplan"

[project.optional-dependencies]
    doc = [
        "Sphinx==5.3.0",
        "rst-to-myst==0.3.4",
        "myst-parser==1.0.0",
        "nbsphinx==0.9.2",
        "sphinx-rtd-theme==1.2.2",
    ]

[tool.setuptools]
    packages=['resiliencyTool']

[tool.setuptools.dynamic]
    dependencies = {file = ["requirements.txt"]}

