[build-system]
    requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
    build-backend = "setuptools.build_meta"

[project]
    name = "reXplan"
    description = "reXplan is a Python library for resilient electrical system planning under extreme hazard events, such as windstorms, earthquakes, floods, wildfire, etc. It is designed to help power system operators and planners make better-informed decisions to create more resilient and secure power grids."
    version = "0.1"
    readme = "README.md"
    requires-python = ">=3.10"
    authors = [{ name = "Tractebel GmbH", email = "rexplan@tractebel.engie.com" }]
    maintainers = [{ name = "R&D Team", email = "rexplan@tractebel.engie.com" }]
    dynamic = ["dependencies"]

[project.urls]
    Documentation = "https://readthedocs.com/to-be-published"
    Repository = "https://github.com/Tractebel-Engineering/reXplan-repo"

[project.optional-dependencies]
    doc = [
        "Sphinx==5.3.0",
        "rst-to-myst==0.3.4",
        "myst-parser==1.0.0",
        "nbsphinx==0.9.2",
        "sphinx-rtd-theme==1.2.2",
        "sphinx_copybutton==0.5.2",
        "sphinx-autobuild==2021.3.14"
    ]

[tool.setuptools]
    packages=['reXplan']

[tool.setuptools.dynamic]
    dependencies = {file = ["requirements.txt"]}

